--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ html,body{
 margin:0;
 padding:0;
 font-family: 'Lato', sans-serif;
-background: #fff url(../images/bg.jpg) center top no-repeat;
+background: #fff url(../images/fpv-chat-bg1-lg.jpg) center top no-repeat;
 background-size: cover;
 height: 100%;
 width: 100%;
@@ -39,6 +39,16 @@ float: left;
 	margin-bottom: 40px;
 }
 
+.pad_top{
+  padding-top: 25px;
+}
+.pad_bottom{
+  padding-bottom: 25px;
+}
+.pad_both{
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
 
 h1{
 font-family: 'Open Sans', sans-serif;
@@ -76,15 +86,18 @@ margin: 0 auto;
 }
 
 h3{
-font-size: 28px;
+font-size: 24px;
 font-weight: 600;
 color: #ffffff;
+margin: 0 0 10px;
 }
 
 .information p{
 font-size: 16px;
 color: #ffffff;
 display: block;
+font-weight: 300;
+margin: 0 0 10px;
 }
 
 .form{
@@ -120,6 +133,10 @@ margin-bottom: 15px;
 		padding-left: 5%;
 		padding-right: 5%;
 	}
+}
+
+@media screen and (min-width: 0px) and (max-width: 650px) {
+  #gfycat { display: none; }
 }
 
 .submit{
