background color update

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ html,body{
 margin:0;
 padding:0;
 font-family: 'Lato', sans-serif;
-background: #fff url(../images/fpv-chat-bg1-lg.jpg) center top no-repeat;
+background: #231e16 url(../images/fpv-chat-bg1-lg.jpg) center top no-repeat;
 background-size: cover;
 height: 100%;
 width: 100%;
